Restart web app after container deployment

--- a/.github/workflows/continuous-dev.yaml
+++ b/.github/workflows/continuous-dev.yaml
@@ -8,6 +8,7 @@ on:
 
 env:
   IMAGE:  gram-parser-workbench
+  rg:  gram-parser
 
 jobs:
   build:
@@ -72,5 +73,10 @@ jobs:
     - name: Azure Login
       run: az login --service-principal -u ${{ secrets.sp_id }} -p ${{ secrets.sp_secret }} --tenant ${{ secrets.tenant_id }}
     # Restart web site
-    # - name: Restart web site
-    #   run:  |
+    - name: Restart web site
+      run:  |
+        targetEnv=${{ steps.environment-name.outputs.targetEnv }}
+        echo "Target environment:  '$targetEnv'"
+        name=$(az webapp list -g $rg -o tsv --query "[?tags.targetEnv==$targetEnv].name")
+        echo "Name of webapp:  '$name'"
+        az webapp restart --name $name -g $rg
