--- a/.github/workflows/nuget-push-alpha.yaml
+++ b/.github/workflows/nuget-push-alpha.yaml
@@ -14,6 +14,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+      ref:  prod
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
       with:
@@ -25,7 +26,7 @@ jobs:
       run: python3 deployment/patch-version.py code/GramParserLib/GramParserLib.csproj ${{ github.run_number }} ${{ github.event.inputs.alpha }}
     # See https://docs.microsoft.com/en-us/dotnet/core/tools/dotnet-build
     - name: Build Nuget
-      run: dotnet build code/GramParserLib/nuget.csproj --configuration Release --no-restore
+      run: dotnet build code/GramParserLib --configuration Release --no-restore
     # See https://docs.microsoft.com/en-us/dotnet/core/tools/dotnet-nuget-push
     - name: Publish Nuget
       run:  nuget push code/GramParserLib/bin/Release/*.nupkg -Source https://api.nuget.org/v3/index.json -ApiKey ${{ secrets.nuget }}
