--- a/code/GramParserLibUnitTest/GramParserLibUnitTest.csproj
+++ b/code/GramParserLibUnitTest/GramParserLibUnitTest.csproj
@@ -29,106 +29,29 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="Meta\AdHoc\BlankLines.txt" />
-    <None Remove="Meta\AdHoc\Bracket.txt" />
-    <None Remove="Meta\AdHoc\Comments.txt" />
-    <None Remove="Meta\AdHoc\Interleave.txt" />
-    <None Remove="Meta\AdHoc\RepeatWithInterleaves.txt" />
-    <None Remove="Meta\AdHoc\TwoRules.txt" />
-    <None Remove="Meta\AnyGrammar.txt" />
-    <None Remove="Meta\SelectChildren\Disjunction.txt" />
-    <None Remove="Meta\Children\Disjunction.txt" />
-    <None Remove="Meta\Children\Sequence.txt" />
-    <None Remove="Meta\Children\Substraction.txt" />
-    <None Remove="Meta\DisjunctionGrammar.txt" />
-    <None Remove="Meta\LiteralGrammar.txt" />
-    <None Remove="Meta\OneLetterOneRuleGrammar.txt" />
-    <None Remove="Meta\RangeGrammar.txt" />
-    <None Remove="Meta\RepeatGrammar.txt" />
-    <None Remove="Meta\SelectChildren\Sequence.txt" />
-    <None Remove="Meta\SequenceGrammar.txt" />
-    <None Remove="Meta\Simple\AnyGrammar.txt" />
-    <None Remove="Meta\Simple\Children.txt" />
-    <None Remove="Meta\Simple\Disjunction3TermsGrammar.txt" />
-    <None Remove="Meta\Simple\DisjunctionGrammar.txt" />
-    <None Remove="Meta\Simple\EscapeLiteralGrammar.txt" />
-    <None Remove="Meta\Simple\LiteralGrammar.txt" />
-    <None Remove="Meta\Simple\OneLetterOneRuleGrammar.txt" />
-    <None Remove="Meta\Simple\RangeGrammar.txt" />
-    <None Remove="Meta\Simple\RepeatGrammar.txt" />
-    <None Remove="Meta\Simple\SequenceGrammar.txt" />
-    <None Remove="Meta\Simple\SubstractGrammar.txt" />
-    <None Remove="Meta\SubstractGrammar.txt" />
-    <None Remove="Output\Array\ConstantArrays.txt" />
-    <None Remove="Output\Array\TextArrays.txt" />
-    <None Remove="Output\Array\ThisArrays.txt" />
-    <None Remove="Output\ConstantArrays.txt" />
-    <None Remove="Output\ConstantFunctions.txt" />
-    <None Remove="Output\ConstantObjects.txt" />
-    <None Remove="Output\Constants.txt" />
-    <None Remove="Output\Constant\BracketSubstitution.txt" />
-    <None Remove="Output\Constant\Constants.txt" />
-    <None Remove="Output\Function\BooleanFunctions.txt" />
-    <None Remove="Output\Function\ChildFunctions.txt" />
-    <None Remove="Output\Function\ConstantFunctions.txt" />
-    <None Remove="Output\Function\FirstOrNull.txt" />
-    <None Remove="Output\Function\Flatten.txt" />
-    <None Remove="Output\Function\IntegerFunctions.txt" />
-    <None Remove="Output\Function\Prepend.txt" />
-    <None Remove="Output\Function\WithTextFunctions.txt" />
-    <None Remove="Output\Identifier\Children.txt" />
-    <None Remove="Output\Identifier\SubItem.txt" />
-    <None Remove="Output\Identifier\Text.txt" />
-    <None Remove="Output\Identifier\This.txt" />
-    <None Remove="Output\Object\Children.txt" />
-    <None Remove="Output\Object\ConstantObjects.txt" />
-    <None Remove="Output\This.txt" />
-    <None Remove="Output\ThisArrays.txt" />
-    <None Remove="TypedOutput\FunctionInvocation.txt" />
-    <None Remove="TypedOutput\RecursiveFunctionInvocation.txt" />
+    <None Remove="Meta\AdHoc\*.txt" />
+    <None Remove="Meta\Children\*.txt" />
+    <None Remove="Meta\SelectChildren\*.txt" />
+    <None Remove="Meta\Simple\*.txt" />
+    <None Remove="Output\Array\*.txt" />
+    <None Remove="Output\Constant\*.txt" />
+    <None Remove="Output\Function\*.txt" />
+    <None Remove="Output\Identifier\*.txt" />
+    <None Remove="Output\Object\*.txt" />
+    <None Remove="TypedOutput\*.txt" />
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Include="Meta\AdHoc\BlankLines.txt" />
-    <EmbeddedResource Include="Meta\AdHoc\Bracket.txt" />
-    <EmbeddedResource Include="Meta\AdHoc\Comments.txt" />
-    <EmbeddedResource Include="Meta\AdHoc\Interleave.txt" />
-    <EmbeddedResource Include="Meta\AdHoc\RepeatWithInterleaves.txt" />
-    <EmbeddedResource Include="Meta\AdHoc\TwoRules.txt" />
-    <EmbeddedResource Include="Meta\SelectChildren\Sequence.txt" />
-    <EmbeddedResource Include="Meta\SelectChildren\Disjunction.txt" />
-    <EmbeddedResource Include="Meta\Children\Substraction.txt" />
-    <EmbeddedResource Include="Meta\Children\Sequence.txt" />
-    <EmbeddedResource Include="Meta\Children\Disjunction.txt" />
-    <EmbeddedResource Include="Meta\Children\Repeat.txt" />
-    <EmbeddedResource Include="Meta\Simple\AnyGrammar.txt" />
-    <EmbeddedResource Include="Meta\Simple\Disjunction3TermsGrammar.txt" />
-    <EmbeddedResource Include="Meta\Simple\DisjunctionGrammar.txt" />
-    <EmbeddedResource Include="Meta\Simple\EscapeLiteralGrammar.txt" />
-    <EmbeddedResource Include="Meta\Simple\LiteralGrammar.txt" />
-    <EmbeddedResource Include="Meta\Simple\OneLetterOneRuleGrammar.txt" />
-    <EmbeddedResource Include="Meta\Simple\RangeGrammar.txt" />
-    <EmbeddedResource Include="Meta\Simple\RepeatGrammar.txt" />
-    <EmbeddedResource Include="Meta\Simple\SequenceGrammar.txt" />
-    <EmbeddedResource Include="Meta\Simple\SubstractGrammar.txt" />
-    <EmbeddedResource Include="Output\Array\ConstantArrays.txt" />
-    <EmbeddedResource Include="Output\Array\TextArrays.txt" />
-    <EmbeddedResource Include="Output\Constant\BracketSubstitution.txt" />
-    <EmbeddedResource Include="Output\Constant\Constants.txt" />
-    <EmbeddedResource Include="Output\Function\BooleanFunctions.txt" />
-    <EmbeddedResource Include="Output\Function\FirstOrNull.txt" />
-    <EmbeddedResource Include="Output\Function\IntegerFunctions.txt" />
-    <EmbeddedResource Include="Output\Function\Flatten.txt" />
-    <EmbeddedResource Include="Output\Function\Prepend.txt" />
-    <EmbeddedResource Include="Output\Function\WithTextFunctions.txt" />
-    <EmbeddedResource Include="Output\Function\ConstantFunctions.txt" />
-    <EmbeddedResource Include="Output\Identifier\Children.txt" />
-    <EmbeddedResource Include="Output\Identifier\SubItem.txt" />
-    <EmbeddedResource Include="Output\Identifier\Text.txt" />
-    <EmbeddedResource Include="Output\Object\Children.txt" />
-    <EmbeddedResource Include="Output\Object\ConstantObjects.txt" />
-    <EmbeddedResource Include="TypedOutput\RecursiveFunctionInvocation.txt" />
-    <EmbeddedResource Include="TypedOutput\FunctionInvocation.txt" />
+    <EmbeddedResource Include="Meta\AdHoc\*.txt" />
+    <EmbeddedResource Include="Meta\Children\*.txt" />
+    <EmbeddedResource Include="Meta\SelectChildren\*.txt" />
+    <EmbeddedResource Include="Meta\Simple\*.txt" />
+    <EmbeddedResource Include="Output\Array\*.txt" />
+    <EmbeddedResource Include="Output\Constant\*.txt" />
+    <EmbeddedResource Include="Output\Function\*.txt" />
+    <EmbeddedResource Include="Output\Identifier\*.txt" />
+    <EmbeddedResource Include="Output\Object\*.txt" />
+    <EmbeddedResource Include="TypedOutput\*.txt" />
   </ItemGroup>
 
   <ItemGroup>
