Upgrade to .NET 7

--- a/code/GramParserLib/GramParserLib.csproj
+++ b/code/GramParserLib/GramParserLib.csproj
@@ -1,6 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
+    <TreatWarningsAsErrors>True</TreatWarningsAsErrors>
+    <WarningLevel>9999</WarningLevel>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
     <Version>0.6.1</Version>
     <Authors>Vincent-Philippe Lauzon</Authors>
@@ -12,16 +16,8 @@
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <Description>Grammar-based parser</Description>
     <Copyright />
-    <Nullable>enable</Nullable>
   </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-    <WarningsAsErrors />
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-    <WarningsAsErrors />
-  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="System.Collections.Immutable" Version="1.5.0" />
     <PackageReference Include="System.Text.Json" Version="5.0.0" />
