--- a/.github/workflows/continuous-build.yaml
+++ b/.github/workflows/continuous-build.yaml
@@ -64,6 +64,6 @@ jobs:
         echo "Target environment:  '$targetEnv'"
         name=$(az webapp list -g $rg -o tsv --query "[?tags.targetEnv=='$targetEnv'].name")
         echo "Name of webapp:  '$name'"
-        # cd workbench-pack
-        cd code/GramParserWorkbench
+        cd workbench-pack
+        # cd code/GramParserWorkbench
         az webapp up --name $name -g $rg --os-type linux
