--- a/.github/workflows/continuous-build.yaml
+++ b/.github/workflows/continuous-build.yaml
@@ -65,4 +65,4 @@ jobs:
         name=$(az webapp list -g $rg -o tsv --query "[?tags.targetEnv=='$targetEnv'].name")
         echo "Name of webapp:  '$name'"
         cd workbench-pack
-        az webapp up --name $name -g $rg --os-type linux --runtime "dotnet:7"
+        az webapp up --name $name -g $rg --os-type linux --runtime "DOTNETCORE:7.0"
