--- a/.github/workflows/continuous-build.yaml
+++ b/.github/workflows/continuous-build.yaml
@@ -75,4 +75,5 @@ jobs:
         name=$(az webapp list -g $rg -o tsv --query "[?tags.targetEnv=='$targetEnv'].name")
         echo "Name of webapp:  '$name'"
         cd workbench-pack
+        zip -r ../workbench-pack.zip .
         az webapp deploy --resource-group $rg --name $name --src-path ../workbench-pack.zip --type zip
