--- a/.github/workflows/continuous-build.yaml
+++ b/.github/workflows/continuous-build.yaml
@@ -57,6 +57,8 @@ jobs:
     # See https://docs.microsoft.com/en-us/dotnet/core/tools/dotnet-publish
     - name: .NET Publish Web App
       run: dotnet publish code/GramParserWorkbench --configuration Release --no-build --output workbench-pack
+    - name: Zip package
+      run:  zip -r workbench-pack.zip workbench-pack
 
     # Deploy web site logic
 
@@ -74,6 +76,4 @@ jobs:
         echo "Target environment:  '$targetEnv'"
         name=$(az webapp list -g $rg -o tsv --query "[?tags.targetEnv=='$targetEnv'].name")
         echo "Name of webapp:  '$name'"
-        cd workbench-pack
-        zip -r ../workbench-pack.zip .
-        az webapp deploy --resource-group $rg --name $name --src-path ../workbench-pack.zip --type zip
+        az webapp deploy --resource-group $rg --name $name --src-path workbench-pack.zip --type zip
