--- a/.github/workflows/continuous-build.yaml
+++ b/.github/workflows/continuous-build.yaml
@@ -56,7 +56,7 @@ jobs:
       run: dotnet test code --configuration Release --no-build --verbosity normal
     # See https://docs.microsoft.com/en-us/dotnet/core/tools/dotnet-publish
     - name: .NET Publish Web App
-      run: dotnet publish code/GramParserWorkbench --configuration Release --no-build --output workbench-pack
+      run: dotnet publish code/GramParserWorkbench/GramParserWorkbench.csproj --configuration Release --no-build --output workbench-pack
     - name: List package
       run: ls -l workbench-pack
 
