--- a/.github/workflows/continuous-build.yaml
+++ b/.github/workflows/continuous-build.yaml
@@ -56,9 +56,13 @@ jobs:
       run: dotnet test code --configuration Release --no-build --verbosity normal
     # See https://docs.microsoft.com/en-us/dotnet/core/tools/dotnet-publish
     - name: .NET Publish Web App
-      run: dotnet publish code/GramParserWorkbench/GramParserWorkbench.csproj --configuration Release --no-build --output workbench-pack
+      run: dotnet publish code/GramParserWorkbench/ --configuration Release --no-build --output workbench-pack
     - name: List package
       run: ls -l workbench-pack
+    - name: Zip
+      run: |
+        cd workbench-pack
+        zip -r workbench-pack.zip .
 
     # Deploy web site logic
 
@@ -76,5 +80,4 @@ jobs:
         echo "Target environment:  '$targetEnv'"
         name=$(az webapp list -g $rg -o tsv --query "[?tags.targetEnv=='$targetEnv'].name")
         echo "Name of webapp:  '$name'"
-        cd workbench-pack
-        az webapp up --name $name -g $rg --os-type linux --runtime "DOTNETCORE:9.0"
+        az webapp deploy --resource-group $rg --name $name --src-path workbench-pack/workbench-pack.zip
