--- a/code/GramParserLibUnitTest/GramParserLibUnitTest.csproj
+++ b/code/GramParserLibUnitTest/GramParserLibUnitTest.csproj
@@ -10,35 +10,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="Meta\AdHoc\*.txt" />
-    <None Remove="Meta\Children\*.txt" />
-    <None Remove="Meta\SelectChildren\*.txt" />
-    <None Remove="Meta\Simple\*.txt" />
-    <None Remove="Output\AdHoc\*.txt" />
-    <None Remove="Output\Array\*.txt" />
-    <None Remove="Output\Constant\*.txt" />
-    <None Remove="Output\Function\*.txt" />
-    <None Remove="Output\Identifier\*.txt" />
-    <None Remove="Output\Object\*.txt" />
-    <None Remove="TypedOutput\*.txt" />
-    <None Remove="Meta\CaseInsensitive\CaseInsensitive.txt" />
+    <None Remove="**\*.txt" />
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Include="Meta\AdHoc\*.txt" />
-    <EmbeddedResource Include="Meta\Children\*.txt" />
-    <EmbeddedResource Include="Meta\SelectChildren\*.txt" />
-    <EmbeddedResource Include="Meta\Simple\*.txt" />
-    <EmbeddedResource Include="Output\AdHoc\*.txt" />
-    <EmbeddedResource Include="Output\Array\*.txt" />
-    <EmbeddedResource Include="Output\Constant\*.txt" />
-    <EmbeddedResource Include="Output\Function\*.txt" />
-    <EmbeddedResource Include="Output\Identifier\*.txt" />
-    <EmbeddedResource Include="Output\Object\*.txt" />
-    <EmbeddedResource Include="TypedOutput\*.txt" />
-    <EmbeddedResource Include="Meta\CaseInsensitive\CaseInsensitive.txt" />
-    <EmbeddedResource Include="Output\Greedy\GreedyQuotes.txt" />
-    <EmbeddedResource Include="Output\Greedy\NonGreedyQuotes.txt" />
+    <EmbeddedResource Include="**\*.txt" />
   </ItemGroup>
 
   <ItemGroup>
